--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+/* ここからindex.html */
 /* メイン画像をグリッド表示にする */
 .product-list{
     display: grid;
@@ -50,6 +51,10 @@
     text-decoration: none;
     display: block;
 }
+
+/* ここまでindex.html */
+
+/* ここからitem.1 */
 
 @media(max-width:600px){
     .product-list{
