--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,8 @@
     justify-content: space-between;
     }
     
-    header h1{
-        font-size:2rem;
+    .site-title img{
+        font-size:0.6rem;
     }
 
     .page-title{
