--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 /* ここからindex.html */
 /* メイン画像をグリッド表示にする */
+.site-title img{
+    width: 75%;
+}
 .product-list{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -174,20 +177,32 @@ table tr:last-child th{
     padding-bottom:2rem;
     }
     /* company */
-    .site-title{
-        text-align: left;
-        text-align: top;
+    .site-title img{
+        width: 75%;
+    }
+    table td{
+        line-height: 1.5rem;
     }
     table th{
         border-bottom: none; 
         line-height:0.5rem;
     }
+    table tr{
+        padding-bottom: 1rem;
+    }
     #company .info table, tr ,th,td{
         display: block;
         width: 100%;
     }
+    .map{
+        text-align: center;
+    }
     .map iframe{
-        width: 300px;
-        height:320px;
+        width: 400px;
+        height:300px;
+        max-width: 100%;
+    }
+    .wrapper{
+        padding: 0 40px;
     }
 }
