--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,35 @@ table tr:last-child th{
     padding-bottom: 2rem;
     filter:grayscale(100%);
 }
+
+/* ここからcontactのデザイン */
+#contact-form{
+    max-width: 600px;
+    
+}
+
+#contact-form input,#contact-form textarea,#contact-form select{
+    width: 100%;
+    border: 1px solid #dcdbbd;
+    padding:10px;
+}
+
+#contact-form input[type="checkbox"],
+#contact-form input[type="radio"] {
+    
+    /* width: 100% などの共通指定を打ち消し、
+        チェックボックス本来のサイズに戻す */
+    width: auto;
+    
+    /* 他の input に指定している padding を無効化し、
+        余白によるズレを防ぐ */
+    padding: 0;
+    
+    /* テキスト入力用の枠線が
+        チェックボックスに適用されないようにする */
+    border: 0;
+}
+/* ここまでcontactのデザイン */
 /* nav */
 /* スライドメニュー */
 
