--- a/css/style.css
+++ b/css/style.css
@@ -873,6 +873,7 @@ table tr:last-child th{
         .profile-word{
             padding-left: 200px;
             padding-top: 3rem;
+            padding-bottom: 200px;
         }
 
         .main-right p{
@@ -885,6 +886,10 @@ table tr:last-child th{
             padding-left: 200px;
         }
         /* ここからがnavのスライドバー====================================================================================================================== */
+
+/* ==============================================experienceの編集=================================================== */
+
+
 /* ここからがレスポンシブ対応========================================================================================================= */
 @media(max-width:600px){
     .product-list{
