人生設計を取り掛かった所だよ

--- a/css/style.css
+++ b/css/style.css
@@ -712,8 +712,8 @@ table th,td {
     padding: 10px;
     font-size: 15px;
     padding-bottom: 5px; /* 線と文字の距離 */
-    padding-left: 90px; /* 左へ長さを追加 */
-    padding-right: 40px; /* 右へ長さを追加 */
+    padding-left: 50px; /* 左へ長さを追加 */
+    padding-right: 20px; /* 右へ長さを追加 */
 }
 
 /* table tr:last-child td{
@@ -907,7 +907,13 @@ table tr:last-child th{
         /* ここからがnavのスライドバー====================================================================================================================== */
 
 /* ==============================================experienceの編集=================================================== */
+.main-colums th{
+    text-align: left;
+    line-height: 2.3;
+    max-width: 650px;
+}
 
+/*  */
 
 /* ここからがレスポンシブ対応========================================================================================================= */
 @media(max-width:600px){
